--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,9 @@
   width: 100vw;
   height: 100vh;
   background-color: #f8f8f8;
+
 }
+
 
 .background-image {
   position: absolute;
@@ -30,26 +32,35 @@
   justify-content: center;
   height: 100vh;
   width: 100vw;
- top: 100px;
+  top: 100px;
   backdrop-filter: blur(4px);
   background-color: rgba(0,0,0,0.5);
-  gap: 20px;
+  /* background-color: blue; */
+
+   
 }
 
 .landing_content {
- margin-top: 430px;
-  margin-left: 100px;
+  margin-top: 430px;
+  margin-left: 200px;
   transform: translate(-50%, -50%);
   z-index: 1;
   text-align: center;
   /* background-color: red; */
-  width: 400px;
+  width: 420px;
   height: 400px;
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
   gap: 10px;
+ 
+}
+.aboutus_container{
+  width:  1300px;
+  margin-right: 20px;
+ 
+  text-align: justify;
 }
 
 .content p,
@@ -58,12 +69,12 @@
 }
 
 .content h1 {
-  font-size: 48px;
+  font-size: 39px;
   margin-bottom: 10px;
 }
 
 .content p {
-  font-size: 25px;
+  font-size: 24px;
 }
 
 .divider {
