--- a/src/AboutUs.css
+++ b/src/AboutUs.css
@@ -1,9 +1,9 @@
 .about-us-container {
     width: 1000px;
-    /* margin: 0 auto; */
-    /* padding: 20px; */
+    margin: 0 auto;
+    padding: 20px;
     /* background-color: red; */
-    text-align: justify;
+    /* text-align:; */
   }
   
   .about-us-heading {
@@ -14,14 +14,14 @@
   }
   
   .about-us-description {
-    font-size: 18px;
+    font-size: 12px;
     color: #666;
     margin-bottom: 30px;
     text-align: center;
   }
   
   .about-us-content {
-    font-size: 18px;
+    font-size: 12px;
     margin-bottom: 20px;
   }
   .plant_logo_right{
