--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -80,6 +80,14 @@ body {
     transition: transform 0.3s ease-in-out;
     z-index: 1;
 }
+.product-category{
+    text-align: center;
+    border-top: 2px solid #444;
+    border-bottom: 2px solid #444;
+    padding: 10px 0;
+    font-weight: bold;
+    width: 350px;
+}
 
 .product-title {
     font-weight: bold;
@@ -90,6 +98,11 @@ body {
     color: #e74c3c;
     font-size: 1.2rem;
     margin-bottom: 10px;
+}
+.product-description{
+
+    font-size: small;
+    font-style: italic;
 }
 
 .product-image {
@@ -105,6 +118,15 @@ body {
     cursor: pointer;
     transition: background-color 0.3s ease-in-out;
     margin-top: 10px;
+}
+.product-button:disabled{
+    background-color:#ccc;
+    /* cursor: not-allowed; */
+}
+
+.product-button:disabled:hover{
+    background-color:#ccc;
+    /* cursor: not-allowed; */
 }
 
 .product-button:hover {
@@ -162,7 +184,19 @@ body {
 }
 .cart{
     color: white;
-    display: flex;
+    /* display: flex; */
+
+    position: relative;
+    display: inline-block;
+}
+.cart-count{
+  position: absolute;
+  top: 30px;       /* Adjust to place inside cart */
+  right: 37px; 
+  color: white;
+  font-size: 32px;
+  font-weight: bold;
+  pointer-events: none;
 }
 .cart_quantity_count{
     margin-top: 16px;
