--- a/src/App.css
+++ b/src/App.css
@@ -144,6 +144,7 @@
     margin-top: 20px; /* Adjust as needed */
     width: 80%; /* Adjust as needed */
   }
+
 }
 
 @media screen and (max-width: 480px) {
@@ -154,5 +155,45 @@
 
   .aboutus_container {
     width: 90%; /* Adjust as needed */
+    
   }
+
+   .landing_content {
+    margin-top: 180px; /* Adjust as needed */
+    margin-left: 250px;
+    height: 260px;
+    width: 60%; /* Adjust as needed */
+    text-align: center;
+  
+  }
+  .landing_content h1{
+    font-size: large;
+
+
+  }
+  .aboutus_container{
+    
+    margin-bottom: 100px;
+    width: 100%;
+    
+   
+  }
+  
+ .aboutus_container p{
+  font-size: 10px;
+  
+ }
+.about-us-description{
+  margin-right: 580px;
+}
+
+.about-us-content {
+    
+    margin-right: 600px;
+   
+    
+  }
+  
+
+
 }
